--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 
   gtag('config', 'G-XQ3MYPKRHF');
 </script>
+<!-- code site: https://courses-hippiques-pro.github.io/ -->
+<meta name="p:domain_verify" content="d67861279ca126aeceb286c21aa11da4"/>
 
   <!-- Site made with Mobirise Website Builder v5.3.10, https://mobirise.com -->
   <meta charset="UTF-8">
