--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html  >
 <head>
 <link rel="canonical" href="https://courses-hippiques-pro.github.io/" />
- 
+<script>
+pintrk('track', 'pagevisit', {
+property: 'Athleta'
+});
+</script> 
 <!-- Pinterest Tag -->
 <script>
 !function(e){if(!window.pintrk){window.pintrk = function () {
