--- a/index.html
+++ b/index.html
@@ -1,6 +1,20 @@
 <!DOCTYPE html>
 <html  >
 <head>
+<link rel="canonical" href="https://courses-hippiques-pro.github.io/" />
+  
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XQ3MYPKRHF"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-XQ3MYPKRHF');
+</script>
+<!-- code site: https://courses-hippiques-pro.github.io/ -->
+<meta name="p:domain_verify" content="d67861279ca126aeceb286c21aa11da4"/>
+
   <!-- Site made with Mobirise Website Builder v5.3.10, https://mobirise.com -->
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
