--- a/paris-sportifs-pro.html
+++ b/paris-sportifs-pro.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html  >
 <head>
+<link rel="canonical" href="https://courses-hippiques-pro.github.io/paris-sportifs-pro.html" />
   <!-- Site made with Mobirise Website Builder v5.3.10, https://mobirise.com -->
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
